# RxP

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.console/: log.md
.custodian/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: custodian-audit.yml
.hooks/: pre-push
examples/v0.1/: runtime_invocation.external_tool.json  runtime_invocation.subprocess.json  runtime_result.failed.json  runtime_result.rejected.json  runtime_result.succeeded.json  runtime_result.timed_out.json
rxp/: __init__.py
rxp/contracts/: __init__.py  artifact_descriptor.py  runtime_invocation.py  runtime_result.py
rxp/validation/: __init__.py  json_schema.py
rxp/vocabulary/: __init__.py  contract_kind.py  runtime_kind.py  runtime_status.py
schemas/v0.1/: artifact_descriptor.schema.json  runtime_invocation.schema.json  runtime_result.schema.json
tests/: conftest.py  test_schema_examples.py  test_validation.py  test_vocabulary.py
